[project]
name = "ynab-mcp"
version = "0.1.0"
description = "MCP server for YNAB (You Need A Budget) integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "ynab-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
ynab-mcp = "ynab_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
